CXF-8407: Incorporate changes caused by JEP-396 integration into JDK-16+ (part 1)
(cherry picked from commit efc5d35498f582335821cc6a2b750df935295f14)

# Conflicts:
#	parent/pom.xml